--- a/apkTools_release/qrcode_generator.html
+++ b/apkTools_release/qrcode_generator.html
@@ -269,7 +269,7 @@
   <div class="container">
     <div class="header">
       <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-      <h1>📱 二维码/条形码生成工具</h1>
+      <h1>📷 二维码/条形码生成工具</h1>
       <p>支持自定义样式、颜色和图标，生成高质量二维码和条形码</p>
     </div>
     <div class="content">
