1. 优化首页 2.添加配置 js 3,添加单位转换工具

--- a/apkTools_release/api_debugger.html
+++ b/apkTools_release/api_debugger.html
@@ -576,7 +576,7 @@
     <div class="header">
       <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>🌐 API 调试工具</h1>
-      <p>支持 HTTP 请求和 WebSocket (WSS) 连接调试</p>
+      <p>支持 HTTP 请求和 WebSocket (WSS) 连接调试，类似 APIFOX，包含请求历史记录。</p>
     </div>
 
     <div class="main-content">
@@ -1570,6 +1570,7 @@
       responseBody.innerHTML = html;
     }
   </script>
+  <script src="./tools.js"></script>
 </body>
 
 </html>
