--- a/apkTools_release/apk_analyzer.html
+++ b/apkTools_release/apk_analyzer.html
@@ -247,8 +247,8 @@
     <div class="container">
         <div class="header">
             <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-            <h1>📦 APK/Keystore 信息提取工具</h1>
-            <p>上传 APK 文件或 Keystore/JKS 文件以提取签名信息</p>
+            <h1>📦 APK 信息提取工具</h1>
+            <p>解析 APK，读取包名与证书指纹等信息，支持拖拽上传与结果复制。</p>
         </div>
         <div class="content">
             <div class="upload-area" id="uploadArea">
@@ -1024,6 +1024,7 @@
             }
         });
     </script>
+    <script src="./tools.js"></script>
 </body>
 
 </html>
