--- a/apkTools_release/color_converter.html
+++ b/apkTools_release/color_converter.html
@@ -251,7 +251,7 @@
     <div class="header">
       <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>🎨 RGB 颜色互转工具</h1>
-      <p>支持 RGB、HEX、HSL 颜色格式互转，提供主流颜色预设</p>
+      <p>支持 RGB、HEX、HSL 颜色格式互转，提供主流颜色预设卡片，条状展示。</p>
     </div>
     <div class="content">
       <div class="form-section">
@@ -564,6 +564,7 @@
     initPresets();
     convert();
   </script>
+  <script src="./tools.js"></script>
 </body>
 
 </html>
