--- a/apkTools_release/json_formatter.html
+++ b/apkTools_release/json_formatter.html
@@ -286,7 +286,7 @@
     <div class="header">
       <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>📋 JSON 格式化工具</h1>
-      <p>JSON 格式化、验证和可视化预览</p>
+      <p>JSON 格式化、压缩、验证和可视化预览，支持语法高亮和实时验证。</p>
     </div>
     <div class="content">
       <div class="btn-group">
@@ -595,6 +595,7 @@
     jsonInput.value = JSON.stringify(exampleJSON, null, 2);
     formatJSON();
   </script>
+  <script src="./tools.js"></script>
 </body>
 
 </html>
