--- a/apkTools_release/string_generator.html
+++ b/apkTools_release/string_generator.html
@@ -616,6 +616,7 @@
       document.getElementById('randomNumberRangeGroup').style.display = type === 'randomNumber' ? 'block' : 'none';
     });
   </script>
+  <script src="./tools.js"></script>
 </body>
 
 </html>
