--- a/apkTools_release/svg_converter.html
+++ b/apkTools_release/svg_converter.html
@@ -529,6 +529,7 @@
       setTimeout(() => URL.revokeObjectURL(url), 100);
     }
   </script>
+  <script src="./tools.js"></script>
 </body>
 
 </html>
