--- a/apkTools_release/keystore_generator.html
+++ b/apkTools_release/keystore_generator.html
@@ -448,7 +448,7 @@
         <div class="header">
             <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
             <h1>🔑 Android 签名文件生成工具</h1>
-            <p>根据包名生成发布签名文件并提取签名信息</p>
+            <p>根据包名生成 .jks 并提取指纹与公钥信息，支持历史记录导入导出。</p>
         </div>
         <div class="content">
             <div class="info-box">
@@ -1576,6 +1576,7 @@
             }
         });
     </script>
+    <script src="./tools.js"></script>
 </body>
 
 </html>
