--- a/apkTools_release/timestamp_converter.html
+++ b/apkTools_release/timestamp_converter.html
@@ -382,6 +382,7 @@
 
     dateInput.value = new Date().toISOString().slice(0, 16);
   </script>
+  <script src="./tools.js"></script>
 </body>
 
 </html>
